<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.TizimgaKirish">

    <TextView
        android:id="@+id/title_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tizimga_kirish"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_marginTop="150sp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/title_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card_password"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:text="@string/_998"
            android:textSize="20sp"
            android:textStyle="bold"
            android:inputType="phone"
            android:hint="@string/telefon_raqam"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/card_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_royhatdan_otish"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:inputType="text"
            android:hint="@string/parol"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_royhatdan_otish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ro_yhatdan_o_tish"
        app:layout_constraintTop_toBottomOf="@id/card_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15sp"
        android:layout_marginTop="20sp"
        android:textStyle="bold"
        android:textColor="#2196F3"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_tizimga_kirish"
        android:layout_width="330dp"
        android:layout_height="66dp"
        app:cardBackgroundColor="#2196F3"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/tv_royhatdan_otish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:id="@+id/btn_tizimga_kirish"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#2196F3"
            android:text="Tizimga kirish"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_1_0"
        app:layout_constraintTop_toBottomOf="@id/card_tizimga_kirish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>